# pickem-api

./: .gitignore  Dockerfile  build.sh  pyproject.toml
.github/workflows/: build.yml  deploy.yml  github-action-hello-world.yml
src/: app.py  main.py
src/api/routes/: __init__.py  admin_router.py  game_router.py  league_router.py  ping_router.py  player_router.py  scrape_router.py  spread_router.py  team_router.py
src/components/admin/: admin_exception.py  admin_models.py  admin_router.py  admin_service.py
src/components/auth/: auth_exceptions.py  auth_models.py  auth_router.py  permission_checker.py
src/components/email/: email_service.py  utils.py
src/components/pick/: pick_exceptions.py  pick_models.py  pick_router.py  pick_service.py
src/components/results/: results_dto.py  results_exception.py  results_router.py  results_service.py
src/components/roles/: roles_exceptions.py  roles_models.py  roles_router.py  roles_service.py
src/components/season/: season_dtos.py  season_exceptions.py  season_router.py  season_service.py
src/components/standings/: __init__.py  standings_dtos.py  standings_exceptions.py  standings_router.py  standings_service.py
src/components/user/: user_exceptions.py  user_models.py  user_router.py  user_service.py  users_router.py
src/config/: base_service.py  db_connection.py  logger.py  settings.py
src/lambdas/: email_spreads.py  load_games_and_results.py  load_spreads.py  oauth_secret_rotation.py  send_notification.py  update_current_week.py  utils.py
src/local/: playground.py  scraper.py  text_converter.py
src/models/: __init__.py  base_models.py  db_models.py  new_db_models.py
src/models/dto/: action_dto.py  admin_dtos.py  dto.py  group_dto.py  league_dtos.py  player_dtos.py  user_dto.py  week_dto.py
src/resources/: app.dev.properties  app.prod.properties  app.properties
src/services/: _user_service.py  league_service.py  oauth_service.py  odds_api_service.py  password_manager.py  player_service.py  property_service.py  secret_service.py  spread_service.py  throttled_client.py
src/services/scrapers/: base_scraper.py  espn_scraper.py  nfl_scraper.py  pfr_scraper.py
src/util/: dependency_cache.py  injection.py
