[tool.poetry]
name = "pickem-api"
version = "0.0.1"
description = "PickEm API"
authors = ["Brayden Kness <brayk2@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"
peewee = "^3.16.3"
black = "^23.9.1"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
imageio = "^2.31.5"
beautifulsoup4 = "^4.12.2"
playwright = "^1.38.0"
mangum = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

