[tool.poetry]
name = "pickem-api"
version = "0.0.1"
description = "PickEm API"
authors = ["Brayden Kness <brayk2@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"
peewee = "^3.16.3"
black = "^23.9.1"
httpx = "^0.25.0"
imageio = "^2.31.5"
beautifulsoup4 = "^4.12.2"
playwright = "^1.38.0"
mangum = "^0.17.0"
unicode = "^2.9"
proxy-requests = "^0.5.2"
nordvpn-switcher = "^0.3.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
pytz = "^2024.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.0.3"
strenum = "^0.4.15"

boto3 = "^1.35.4"
[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-module = "local.create_module:main"

