[tool.poetry]
name = "pickem-api"
version = "0.0.3"
description = "PickEm API"
authors = ["Brayden Kness <brayk2@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
peewee = "^3.16.3"
black = "^24.8.0"
httpx = "^0.27.0"
imageio = "^2.31.5"
beautifulsoup4 = "^4.12.2"
playwright = "^1.38.0"
mangum = "^0.17.0"
unicode = "^2.9"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
pytz = "^2024.1"
python-jose = "^3.3.0"
strenum = "^0.4.15"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.4"
boto3 = "^1.35.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-module = "local.create_module:main"

